2007-01-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (insert_commands): Use fatal for errors.
	(insert_commands): Actually, use "error", not "fatal".
	White space changes.

2007-01-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (run_makeinfo): Instead of putting the whole
	function in a "case", return if the language is not texinfo.

2007-01-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: White space changes.

2007-01-08  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd (rArr): define, per Per.

2007-01-07  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (cm_result): use rArr for html or docbook.

	* makeinfo/lang.c (encoding_table): include UTF-8, just passing
	through everything as-is.
	(asis_map): rename us_ascii_map (and change US-ASCII entry).

2007-01-03  Karl Berry  <karl@gnu.org>

	* makeinfo/xml.c (xml_id): oops, whitespace should be replaced
	too.  And probably more, but let's leave it at this for now.

2007-01-02  Karl Berry  <karl@gnu.org>

	* makeinfo/xml.c (xml_id): do not use the SGML rules for id's,
	which were very restrictive (no 8-bit chars).  Instead, just pass
	along what we are given, more or less, per current XML.

2006-12-30  Karl Berry  <karl@gnu.org>

	* makeinfo/xml.c (xml_insert_element_with_attribute): remove the
	warning again, the html-docdesc test triggers it for no apparent
	reason, and I don't want to debug it now.

	* doc/texinfo.tex (\DeclareUnicodeCharacter, et al.): new macros
	to support @documentencoding UTF-8 (as well as Computer Modern
	can).  From Werner Lemberg.

2006-12-28  Karl Berry  <karl@gnu.org>

	* makeinfo/xml.c (xml_insert_element_with_attribute): give a
	warning if we need to ignore an insertion because the book hasn't
	started.  Can this ever happen with acceptable Texinfo documents?
	I saw it in a document without @settitle but with @copying.
	(xml_add_char): ensure that we have an element stack before
	testing xml_current_element and failing the assertion.