@@ -1,3 +1,9 @@
+2007-01-25  Karl Berry  <karl@gnu.org>
+
+	* makeinfo/float.c (cm_listoffloats): always use the short caption
+	in the list of floats if it is provided.  Report from
+	Jay Berkenbilt, 19 Jan 2007 11:58:00 -0500.
+
 2007-01-16  Akim Demaille  <akim@epita.fr>
 
 	* util/texi2dvi (insert_commands): Use fatal for errors.
